# TelePrompt_Studio

./: .gitignore  README.md  TelePrompt Studio_Prompt.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ControlStrip.tsx  Countdown.tsx  SettingsPanel.tsx  TeleprompterView.tsx  TitleBar.tsx
src/hooks/: useHotkeys.ts  useScroller.ts  useSettings.ts
src/types/: index.ts
website/: index.html  script.js  style.css
