[package]
name = "teleprompt-studio"
version = "1.0.0"
description = "A floating teleprompter overlay for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "teleprompt_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
strip = true
